--- a/_sources/changelog.txt
+++ b/_sources/changelog.txt
@@ -1,6 +1,14 @@
 ChangeLog
 =========
 
+**FreeROI 0.2.2**
+
+* Add cluster information stats (e.g., cluster size, peak value and the 
+  coordinate of peak voxel) in the clustering module.
+
+* Add a ROI size calculater which calculate the voxel number whose value 
+  equal to a specific value with a simple click.
+
 **FreeROI 0.2.1**
 
 * Fix bugs in Orth Viewer, binarization dialog, and region growing dialog.
